# drawy

./: .clangd  .editorconfig  CMakeLists.txt  CONTRIBUTING.md  LICENSE_HEADER  README.md  flake.nix
src/: main.cpp
src/canvas/: canvas.cpp  canvas.hpp
src/command/: command.hpp  commandhistory.cpp  commandhistory.hpp  deselectcommand.cpp  deselectcommand.h  deselectcommand.hpp  groupcommand.cpp  groupcommand.h  groupcommand.hpp  insertitemcommand.cpp  insertitemcommand.hpp  itemcommand.cpp  itemcommand.hpp  moveitemcommand.cpp  moveitemcommand.hpp  removeitemcommand.cpp  removeitemcommand.h  removeitemcommand.hpp  selectcommand.cpp  selectcommand.h  selectcommand.hpp  ungroupcommand.cpp  ungroupcommand.h  ungroupcommand.hpp  updatepropertycommand.cpp  updatepropertycommand.hpp
src/common/: constants.hpp  renderitems.cpp  renderitems.hpp  utils.hpp
src/common/utils/: compression.cpp  compression.hpp  qt.cpp  qt.hpp
src/components/: actionbar.cpp  actionbar.hpp  propertybar.cpp  propertybar.hpp  toolbar.cpp  toolbar.hpp
src/context/: applicationcontext.cpp  applicationcontext.hpp  coordinatetransformer.cpp  coordinatetransformer.hpp  renderingcontext.cpp  renderingcontext.hpp  selectioncontext.cpp  selectioncontext.hpp  spatialcontext.cpp  spatialcontext.hpp  uicontext.cpp  uicontext.hpp
src/controller/: action.cpp  action.hpp  controller.cpp  controller.hpp  keypress.hpp
src/data-structures/: cachegrid.cpp  cachegrid.hpp  orderedlist.cpp  orderedlist.hpp  quadtree.cpp  quadtree.h  quadtree.hpp  uniquedeque.hpp
src/event/: event.cpp  event.hpp
src/iconmanager/: iconmanager.cpp  iconmanager.h  iconmanager.hpp
src/item/: arrow.cpp  arrow.hpp  ellipse.cpp  ellipse.hpp  freeform.cpp  freeform.h  freeform.hpp  group.cpp  group.h  group.hpp  item.cpp  item.h  item.hpp  line.cpp  line.hpp  polygon.cpp  polygon.hpp  rectangle.cpp  rectangle.hpp  text.cpp  text.h  text.hpp
src/item/factory/: arrowfactory.cpp  arrowfactory.hpp  ellipsefactory.cpp  ellipsefactory.hpp  freeformfactory.cpp  freeformfactory.hpp  itemfactory.cpp  itemfactory.hpp  linefactory.cpp  linefactory.hpp  rectanglefactory.cpp  rectanglefactory.hpp  textfactory.cpp  textfactory.hpp
src/keybindings/: action.cpp  action.hpp  actionmanager.cpp  actionmanager.h  actionmanager.hpp  keybindmanager.cpp  keybindmanager.hpp
src/properties/: property.cpp  property.h  property.hpp
src/properties/widgets/: actionswidget.cpp  actionswidget.h  actionswidget.hpp  erasersizewidget.cpp  erasersizewidget.hpp  fontsizewidget.cpp  fontsizewidget.hpp  propertymanager.cpp  propertymanager.hpp  propertywidget.cpp  propertywidget.hpp  strokecolorwidget.cpp  strokecolorwidget.hpp  strokewidthwidget.cpp  strokewidthwidget.hpp
src/resources/: res.qrc  style.qss
src/serializer/: loader.cpp  loader.hpp  serializer.cpp  serializer.hpp
src/tools/: arrowtool.cpp  arrowtool.hpp  drawingtool.cpp  drawingtool.hpp  ellipsetool.cpp  ellipsetool.hpp  erasertool.cpp  erasertool.hpp  freeformtool.cpp  freeformtool.hpp  linetool.cpp  linetool.hpp  movetool.cpp  movetool.hpp  polygondrawingtool.cpp  polygondrawingtool.hpp  rectangletool.cpp  rectangletool.hpp  texttool.cpp  texttool.hpp  tool.cpp  tool.hpp
src/tools/selectiontool/: selectiontool.cpp  selectiontool.hpp  selectiontoolmovestate.cpp  selectiontoolmovestate.hpp  selectiontoolselectstate.cpp  selectiontoolselectstate.h  selectiontoolselectstate.hpp  selectiontoolstate.hpp
src/window/: boardlayout.cpp  boardlayout.hpp  window.cpp  window.hpp
